# ICO-learning

./: CMakeLists.txt  Makefile  README.md  demo.cpp  icolearning.cpp  icolearning.h  onef_high_weights.plt  onef_highest_weights.plt  onef_low_weights.plt  onef_weights.plt  stdp.plt  ten_filters_weights.plt  trace.cpp  trace.h
